// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppliedGiftCards should render correctly for empty state 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontSize="fs16"
    margin={null}
    mobileFontFamily="secondary"
    numberOfLines={null}
    textDecoration={null}
  />
</Styled(View)>
`;

exports[`AppliedGiftCards should render correctly for filled state 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.700"
      dataLocator=""
      fontSize="fs16"
      key="1"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="ending in 4321 | Remaining Balance: $0.00"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.700"
      dataLocator=""
      fontSize="fs16"
      key="2"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="ending in 1234 | Remaining Balance: $15.00"
      textDecoration={null}
    />
  </Styled(View)>
  <Styled(Text)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs16"
      fontWeight="extrabold"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="Heads Up!"
      textDecoration={null}
    />
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs16"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text=" Please keep you Gift Card until you receive the item(s) purchased."
      textDecoration={null}
    />
  </Styled(Text)>
</Styled(View)>
`;
